<resources>
    <string name="app_name">Fin Infocom Assignment</string>
    <string name="enter_your_email">Enter your username</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="enter_your_password">Enter  password</string>
    <string name="log_in">Log in</string>
    <string name="enter_username">Enter Username</string>
</resources>